--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "backend of eubricks_client",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/app.ts",
     "test": "",
     "dev": "nodemon src/index.ts"
   },
