--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "backend of eubricks_client",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "test": "",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "author": "sucheta mahata",
   "license": "ISC",
