--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "author": "sucheta mahata",
   "license": "ISC",
@@ -18,7 +17,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "node": "16.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
