--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
-    "ts-node": "^10.8.2",
     "node": "16.13.0",
-    "typescript": "^4.7.4",
-    "tsc": "^2.0.3"
+    "path": "^0.12.7",
+    "ts-node": "^10.8.2",
+    "tsc": "^2.0.3",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
