--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "backend of eubricks_client",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.js",
+    "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/app.ts"
   },
   "author": "sucheta mahata",
   "license": "ISC",
@@ -21,12 +21,13 @@
     "path": "^0.12.7",
     "ts-node": "^10.8.2",
     "tsc": "^2.0.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "nodemon": "^2.0.18"
+
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.8",
-    "nodemon": "^2.0.18"
+    "@types/jsonwebtoken": "^8.5.8"
   }
 }
