--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend of eubricks_client",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts"
   },
